banner image not showing. Adjusted css to maybe fix and replaced <header> tag with <div>. Removed html height and width attributes to see of that fixes mobile scaling issue.

--- a/css/styles.css
+++ b/css/styles.css
@@ -4,5 +4,8 @@ img {
   max-width: 100%;
 }
 banner-img {
-  background: url('./images/index_header_image.png')
+  background: url('./images/index_header_image.png');
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
 }
